Update build.md